--- a/components/Card/Card.module.scss
+++ b/components/Card/Card.module.scss
@@ -9,6 +9,15 @@
   margin-bottom: 2rem;
   box-shadow: 0px 0px 4px black;
 
+  .image {
+
+    img {
+      height: 12em;
+      object-fit: cover;
+
+    }
+  }
+
   .title {
     font-size: 1.5rem;
     text-align: center;
