--- a/components/Card/Card.module.scss
+++ b/components/Card/Card.module.scss
@@ -1,13 +1,15 @@
+@import '../../styles/colors.scss';
+
 .card {
   width: 90vw;
   height: 23em;
-  background-color: #359c2c;
+  background-color: $blue-1;
   display: flex;
   flex-direction: column;
   border-radius: 1rem;
   overflow: hidden;
   margin-bottom: 2rem;
-  box-shadow: 0px 0px 4px black;
+  box-shadow: 3px 3px 5px $blue-2;
 
   .image {
 
