--- a/components/Nav/Nav.module.scss
+++ b/components/Nav/Nav.module.scss
@@ -1,7 +1,9 @@
+@import '../../styles/colors.scss';
+
 .nav,
 .navClose {
   ul {
-    position: absolute;
+    position: fixed;
     top: 10vh;
     right: 0;
     z-index: 30;
@@ -9,7 +11,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: green;
+    background: linear-gradient(70deg, $verde-1, $verde-2);
     width: 100%;
     height: 90vh;
     transition: transform 1s;
@@ -32,8 +34,8 @@
     width: 50px;
     height: 10vh;
     padding: .2rem;
-    background-color: #359c2c;
-    border-bottom: 1px solid black;
+    background-color: $blue-2;
+    border-bottom: 3px solid $blue-2;
     overflow: hidden;
 
     @media screen and (min-width:768px) {
@@ -44,7 +46,7 @@
       position: relative;
       width: 100%;
       height: 4px;
-      background-color: white;
+      background-color: $white;
       border-radius: 2px;
       transition: transform 1s ease-out;
 
@@ -55,7 +57,7 @@
         left: 0;
         width: 100%;
         height: 4px;
-        background-color: white;
+        background-color: $white;
         border-radius: 2px;
         transition: transform 1s ease-out;
       }
