--- a/components/Swiper/SwiperCarousel.module.scss
+++ b/components/Swiper/SwiperCarousel.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors.scss';
+
 .swiperBanner {
   position: relative;
   display: flex;
@@ -17,7 +19,7 @@
     align-items: center;
     z-index: 20;
     width: 100%;
-    background-color: #359c2ca3;
+    background: linear-gradient(70deg, $blue-1--transparent, $blue-2--transparent);
     backdrop-filter: blur(3px);
     padding: 1rem;
 
