added new images and descriptions of pests

--- a/components/Card/Card.module.scss
+++ b/components/Card/Card.module.scss
@@ -2,14 +2,19 @@
 
 .card {
   width: 90vw;
-  height: 23em;
-  background-color: $blue-1;
+  height: 24em;
+  background: linear-gradient(80deg, $blue-1, $blue-2 );
+  background: radial-gradient();
   display: flex;
   flex-direction: column;
   border-radius: 1rem;
   overflow: hidden;
-  margin-bottom: 2rem;
   box-shadow: 3px 3px 5px $blue-2;
+
+  @media screen and (min-width: 768px) {
+    width: 20vw;
+    justify-self: center;
+  }
 
   .image {
 
@@ -23,11 +28,12 @@
   .title {
     font-size: 1.5rem;
     text-align: center;
-    padding: 1rem;
+    padding-top: 1rem;
   }
 
   .description {
     padding: 1rem;
+    font-size: .8rem;
   }
 
 }
