--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -3,9 +3,9 @@ $blue-2: #5383d8;
 $blue-1--transparent: #279fbda1;
 $blue-2--transparent: #5384d8a1;
 
-$verde-1: #9ad058;
-$verde-2: #338581;
+$green-1: #9ad058;
+$green-2: #338581;
 
-$naranja: #e47b37;
+$orange: #e47b37;
 
-$white: #fff;
+$white: rgba(255, 255, 255, 0.575);
