--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -10,6 +10,7 @@
   transition: position 5s;
   border-bottom: .3rem solid $blue-2;
   background-color: $white;
+  backdrop-filter: blur(5px);
   width: 100%;
   z-index: 50;
   padding: 0 0 0 1rem;
