--- a/components/Nav/Nav.module.scss
+++ b/components/Nav/Nav.module.scss
@@ -11,7 +11,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(70deg, $verde-1, $verde-2);
+    background: linear-gradient(70deg, $green-1, $green-2);
     width: 100%;
     height: 90vh;
     transition: transform 1s;
@@ -20,9 +20,8 @@
       position: static;
       flex-direction: row;
       gap: 1rem;
-      padding: 1rem;
-      background-color: transparent;
-      height: auto;
+      background: transparent;
+      height: 10vh;
     }
   }
 
