fix minor errors

--- a/components/Form/Form.module.scss
+++ b/components/Form/Form.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/colors.scss';
 
 .form {
-  width: 100vw;
+  width: 100%;
   background-color: $orange;
   display: flex;
   justify-content: center;
