--- a/components/Form/Form.module.scss
+++ b/components/Form/Form.module.scss
@@ -2,11 +2,36 @@
 
 .form {
   width: 100%;
-  background-color: $orange;
+  background-color: $green-2;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 1rem;
+
+  h4 {
+    font-size: 1.2rem;
+    padding: 1rem;
+  }
+
+  .contact {
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+    gap: 1rem;
+    padding: 3rem;
+
+    @media screen and (min-width: 768px) {
+      flex-direction: column;
+    }
+
+    svg {
+      color: $orange;
+      width: 40px;
+      height: 40px;
+      cursor: pointer;
+    }
+  }
 
   .formBox {
     width: 90vw;
@@ -17,10 +42,13 @@
 
     @media screen and (min-width: 768px) {
       width: 70vw;
+      flex-direction: row;
+      justify-content: space-between;
     }
 
-    h2 {
+    .title {
       font-size: 1.5rem;
+      font-weight: bold;
       margin: 1rem;
     }
 
@@ -48,14 +76,23 @@
       button {
         width: 90%;
         padding: 1rem;
-        box-shadow: 0px 0px 5px $blue-1;
+        border-bottom: 3px solid $orange;
+        box-shadow: 0px 0px 3px $orange;
         border-radius: .5rem;
+
+        &::placeholder {
+          color: white;
+        }
       }
 
       button {
-        background-color: $blue-2;
-        width: 25vw;
+        background-color: $orange;
+        width: 50vw;
         transition: box-shadow 1s, background-color 1s;
+
+        @media screen and (min-width: 768px) {
+          width: 15vw;
+        }
 
         &:hover {
           box-shadow: none;
