--- a/components/Nav/Nav.module.scss
+++ b/components/Nav/Nav.module.scss
@@ -16,12 +16,23 @@
     height: 90vh;
     transition: transform 1s;
 
+    li {
+      padding: 1rem;
+      font-size: 1.5rem;
+
+    }
+
     @media screen and (min-width: 768px) {
       position: static;
       flex-direction: row;
       gap: 1rem;
       background: transparent;
       height: 10vh;
+
+      li {
+        padding: 0;
+        font-size: 1rem;
+      }
     }
   }
 
