--- a/components/Swiper/SwiperCarousel.module.scss
+++ b/components/Swiper/SwiperCarousel.module.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   width: 100%;
   height: 40vh;
+  overflow: hidden;
 
   @media screen and (min-width: 768px) {
     height: 90vh;
