--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -2,6 +2,7 @@
 
 .description {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   color: black;
@@ -11,6 +12,10 @@
   border-radius: 1rem;
   box-shadow: 0px 0px 4px $green-2;
   width: 90vw;
+
+  p {
+    padding: .5rem;
+  }
 
   @media screen and (min-width: 768px) {
     width: 70vw;
@@ -49,21 +54,20 @@
       font-size: 2rem;
     }
 
-    .line,
-    .line2 {
+    &::after,
+    &::before {
+      content: '';
+      border-radius: 1rem;
       position: absolute;
-      bottom: -10px;
+      bottom: -15px;
+      left: 0;
+      background-color: orange;
       width: 50%;
-      height: 3px;
-      background-color: Black;
-
-      @media screen and (min-width: 768px) {
-        background-color: white;
-      }
+      height: 4px;
     }
 
-    .line2 {
-      bottom: -20px;
+    &::before {
+      bottom: -25px;
       width: 25%;
     }
   }
