--- a/components/Form/Form.module.scss
+++ b/components/Form/Form.module.scss
@@ -24,13 +24,6 @@
     @media screen and (min-width: 768px) {
       flex-direction: column;
     }
-
-    svg {
-      color: $orange;
-      width: 40px;
-      height: 40px;
-      cursor: pointer;
-    }
   }
 
   .formBox {
@@ -43,7 +36,25 @@
     @media screen and (min-width: 768px) {
       width: 70vw;
       flex-direction: row;
+      justify-content: space-ev;
+    }
+
+    .contact {
+      display: flex;
+      align-items: center;
       justify-content: space-between;
+      gap: 3rem;
+
+      @media screen and (min-width: 768px) {
+        flex-direction: column;
+      }
+
+      svg {
+        color: $orange;
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+      }
     }
 
     .title {
