--- a/components/Title/Title.module.scss
+++ b/components/Title/Title.module.scss
@@ -9,7 +9,12 @@
   background-clip: text;
   -webkit-text-fill-color: transparent;
   color: tomato;
-  padding: .1rem;
+  padding: .5rem 0;
+  width: 90vw;
+
+  @media screen and (min-width:768px) {
+    width: auto;
+  }
 
   &::after,
   &::before {
