--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -1,6 +1,7 @@
 @import '../styles/colors.scss';
 
 .description {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,6 +13,19 @@
   border-radius: 1rem;
   box-shadow: 0px 0px 4px $green-2;
   width: 90vw;
+
+  .image {
+    position: absolute;
+    left: -20px;
+    top: -50px;
+    width: 60px;
+    height: 100px;
+
+    @media screen and (min-width: 768px) {
+      left: -30px;
+      top: -40px;
+    }
+  }
 
   p {
     padding: .5rem;
@@ -29,8 +43,15 @@
   margin: 10vh;
   color: black;
   padding: 1rem;
-  border-radius: 1rem;
-  box-shadow: 0px 0px 4px $orange;
+
+  h2 {
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.3rem;
+    color: $orange;
+    padding: .5rem;
+    margin-bottom: 1rem;
+  }
 
   @media screen and (min-width:768px) {
     width: 70vw;
@@ -61,7 +82,7 @@
       position: absolute;
       bottom: -15px;
       left: 0;
-      background-color: orange;
+      background-color: $orange;
       width: 50%;
       height: 4px;
     }
