--- a/pages/hormigas/Hormigas.module.scss
+++ b/pages/hormigas/Hormigas.module.scss
@@ -6,8 +6,7 @@
 }
 
 .paragraphs,
-.paragraphs2,
-.paragraphs3 {
+.paragraphs2 {
   color: black;
   width: 90vw;
   display: flex;
@@ -31,41 +30,16 @@
 }
 
 .paragraphs2 {
-  h3 {
-    text-align: center;
-    font-weight: bold;
-    background-color: $green-1;
-  }
-
-  div {
-    display: flex;
-
-    img {
-      float: left;
-      padding: .5rem;
-      width: 100px;
-      height: 100px;
-    }
-  }
-}
-
-.paragraphs3 {
-  color: white;
+  position: relative;
   background-color: $blue-1;
   border-radius: 1rem;
-  padding: 1rem;
+  color: white;
 
-  h3 {
-    text-align: center;
-    font-weight: bold;
-    padding: .5rem;
-  }
-
-  ul {
-    padding-left: 1rem;
-
-    li {
-      list-style: inside;
-    }
+  img {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: -15px;
+    left: -10px;
   }
 }
