--- a/components/Card/Card.module.scss
+++ b/components/Card/Card.module.scss
@@ -11,6 +11,7 @@
   border-radius: 1rem;
   overflow: hidden;
   box-shadow: 3px 3px 5px $blue-2;
+  color: white;
 
   @media screen and (min-width: 768px) {
     width: 20vw;
