--- a/pages/cucarachas/Cucarachas.module.scss
+++ b/pages/cucarachas/Cucarachas.module.scss
@@ -50,10 +50,19 @@
 }
 
 .paragraphs3 {
+  position: relative;
   color: white;
   background-color: $blue-1;
   border-radius: 1rem;
   padding: 1rem;
+
+  img {
+    position: absolute;
+    top: -20px;
+    right: -8px;
+    width: 50px;
+    height: 50px;
+  }
 
   h3 {
     text-align: center;
