--- a/components/Card/Card.module.scss
+++ b/components/Card/Card.module.scss
@@ -42,6 +42,35 @@
     position: absolute;
     bottom: 10px;
     right: 10px;
+    color: $orange;
+    font-weight: bold;
+
+    .one {
+      animation: animate 2s infinite ease-in-out .1s;
+    }
+
+    .two {
+      animation: animate 2s infinite ease-in-out .2s;
+    }
+
+    .three {
+      animation: animate 2s infinite ease-in-out .3s;
+    }
   }
 
+}
+
+@keyframes animate {
+  0% {
+    opacity: 0;
+  }
+
+  50% {
+    color: $green-1
+  }
+
+  100% {
+    opacity: 1;
+    color: $green-2;
+  }
 }
