--- a/components/Form/Form.module.scss
+++ b/components/Form/Form.module.scss
@@ -100,6 +100,7 @@
         background-color: $orange;
         width: 50vw;
         transition: box-shadow 1s, background-color 1s;
+        color: white;
 
         @media screen and (min-width: 768px) {
           width: 15vw;
