--- a/components/Nav/Nav.module.scss
+++ b/components/Nav/Nav.module.scss
@@ -22,6 +22,18 @@
 
     }
 
+    .contact {
+      display: flex;
+      gap: 2rem;
+      margin-top: 10rem;
+
+      svg {
+        width: 40px;
+        height: 40px;
+        color: white
+      }
+    }
+
     @media screen and (min-width: 768px) {
       position: static;
       flex-direction: row;
