--- a/components/Card/Card.module.scss
+++ b/components/Card/Card.module.scss
@@ -1,64 +1,77 @@
 @import '../../styles/colors.scss';
 
 .card {
-  position: relative;
-  width: 90vw;
-  height: 24em;
-  background: linear-gradient(80deg, $blue-1, $blue-2 );
-  background: radial-gradient();
+  width: 20rem;
+  height: 24rem;
+  // background: linear-gradient(80deg, $blue-1, $blue-2 );
+  background: radial-gradient(circle at 100%, $blue-1, $blue-1 30%, $blue-2 60%, $blue-1 75%);
   display: flex;
   flex-direction: column;
   border-radius: 1rem;
-  overflow: hidden;
-  box-shadow: 3px 3px 5px $blue-2;
+  box-shadow: 3px 3px 5px $blue-1;
   color: white;
+  overflow: hidden;
 
   @media screen and (min-width: 768px) {
-    width: 20vw;
     justify-self: center;
   }
 
-  .image {
+  img {
+    width: 20rem;
+    height: 12rem;
+    object-fit: cover;
 
-    img {
-      height: 12em;
-      object-fit: cover;
-
-    }
   }
 
   .title {
-    font-size: 1.5rem;
+    font-size: 1.5em;
     text-align: center;
     padding-top: 1rem;
   }
 
   .description {
+    height: 7rem;
+    font-size: .8em;
     padding: 1rem;
-    font-size: .8rem;
   }
 
-  .more {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    color: $orange;
-    font-weight: bold;
+  .information {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 
-    .one {
-      animation: animate 2s infinite ease-in-out .1s;
+    .contact {
+      display: flex;
+      gap: 2rem;
+
+      svg {
+        color: $green-1;
+        width: 1.5rem;
+        height: 1.5rem;
+      }
     }
 
-    .two {
-      animation: animate 2s infinite ease-in-out .2s;
-    }
+    .buttonMore {
+      display: flex;
+      gap: .5rem;
+      font-size: 1.2rem;
 
-    .three {
-      animation: animate 2s infinite ease-in-out .3s;
+      .one {
+        animation: animate 2s infinite ease-in-out .1s;
+      }
+
+      .two {
+        animation: animate 2s infinite ease-in-out .2s;
+      }
+
+      .three {
+        animation: animate 2s infinite ease-in-out .3s;
+      }
     }
   }
 
 }
+
 
 @keyframes animate {
   0% {
@@ -71,6 +84,6 @@
 
   100% {
     opacity: 1;
-    color: $green-2;
+    color: $orange;
   }
 }
