--- a/components/Form/Form.module.scss
+++ b/components/Form/Form.module.scss
@@ -72,24 +72,27 @@
 
       div {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 1rem;
-        width: 90%;
 
-        input {
-          width: 50%;
+        span {
+          padding: 1rem;
         }
       }
 
       input,
       textarea,
       button {
-        width: 90%;
+        width: 90VW;
         padding: 1rem;
         border-bottom: 3px solid $orange;
         box-shadow: 0px 0px 3px $orange;
         border-radius: .5rem;
+
+        @media screen and (min-width: 768px) {
+          width: 30vw;
+        }
 
         &::placeholder {
           color: white;
@@ -101,6 +104,7 @@
         width: 50vw;
         transition: box-shadow 1s, background-color 1s;
         color: white;
+        border: none;
 
         @media screen and (min-width: 768px) {
           width: 15vw;
