--- a/components/Nav/Nav.module.scss
+++ b/components/Nav/Nav.module.scss
@@ -1,118 +1,126 @@
 @import '../../styles/colors.scss';
 
-.nav,
-.navClose {
+.navMobile,
+.nav {
   ul {
     position: fixed;
-    top: 10vh;
-    right: 0;
-    z-index: 30;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    background: linear-gradient(70deg, $green-1, $green-2);
-    width: 100%;
+    align-items: center;
+    top: 10vh;
+    left: 0;
+    width: 100vw;
     height: 90vh;
-    transition: transform 1s;
-
-    li {
-      padding: 1rem;
-      font-size: 1.5rem;
-
-    }
-
-    .contact {
-      display: flex;
-      gap: 2rem;
-      margin-top: 10rem;
-
-      svg {
-        width: 40px;
-        height: 40px;
-        color: white
-      }
-    }
+    background: linear-gradient(70deg, $green-1, $green-2);
+    transition: transform .5s linear;
 
     @media screen and (min-width: 768px) {
+      color: $green-2;
       position: static;
       flex-direction: row;
       gap: 1rem;
       background: transparent;
-      height: 10vh;
+      height: auto;
+      width: auto;
+    }
 
-      li {
-        padding: 0;
-        font-size: 1rem;
+    li {
+      font-size: 1.5em;
+      padding: 1.5rem;
+      font-weight: bold;
+
+      @media screen and (min-width: 768px) {
+        padding: 1rem;
+        font-size: 1.1em;
       }
     }
   }
 
-  .button,
-  .buttonClose {
+  .contact {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50px;
-    height: 10vh;
-    padding: .2rem;
-    background-color: $blue-2;
-    border-bottom: 3px solid $blue-2;
-    overflow: hidden;
+    gap: 5rem;
 
-    @media screen and (min-width:768px) {
-      display: none;
+    svg {
+      margin-top: 8rem;
+      width: 2rem;
+      height: 2rem;
     }
 
-    div {
-      position: relative;
+    @media screen and (min-width: 768px) {
+      display: none;
+    }
+  }
+}
+
+.nav {
+  ul {
+    transform: translateX(100%);
+
+    @media screen and (min-width: 768px) {
+      transform: translateX(0);
+    }
+  }
+}
+
+.button,
+.buttonClose {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 10vh;
+  padding: .2rem;
+  background-color: $blue-2;
+  border-bottom: 3px solid $blue-2;
+  overflow: hidden;
+
+  @media screen and (min-width:768px) {
+    display: none;
+  }
+
+  div {
+    position: relative;
+    width: 100%;
+    height: 4px;
+    background-color: $white;
+    border-radius: 2px;
+    transition: transform 1s ease-out;
+
+    &::after,
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
       width: 100%;
       height: 4px;
       background-color: $white;
       border-radius: 2px;
       transition: transform 1s ease-out;
-
-      &::after,
-      &::before {
-        content: '';
-        position: absolute;
-        left: 0;
-        width: 100%;
-        height: 4px;
-        background-color: $white;
-        border-radius: 2px;
-        transition: transform 1s ease-out;
-      }
-
-      &::before {
-        top: -10px;
-      }
-
-      &::after {
-        top: 10px;
-      }
     }
-  }
 
-  .buttonClose {
-    div {
-      transform: rotate(45deg);
-      top: 0;
+    &::before {
+      top: -10px;
+    }
 
-      &::before {
-        transform: rotate(90deg);
-        top: 0;
-      }
-
-      &::after {
-        display: none;
-      }
+    &::after {
+      top: 10px;
     }
   }
 }
 
-.navClose {
-  ul {
-    transform: translate(-100%);
+.buttonClose {
+  div {
+    transform: rotate(45deg);
+    top: 0;
+
+    &::before {
+      transform: rotate(90deg);
+      top: 0;
+    }
+
+    &::after {
+      display: none;
+    }
   }
 }
