--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -93,16 +93,26 @@
     }
   }
 
-  div {
+  .cardContainer {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 2rem 0;
 
     @media screen and (min-width: 768px) {
       width: 70vw;
       display: grid;
+      gap: 2rem;
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media screen and (min-width: 1100px) {
+      width: 70vw;
+      display: grid;
+      gap: 2rem;
       grid-template-columns: repeat(3, 1fr);
     }
+
   }
 
   @media screen and (min-width: 768px) {
