--- a/components/Swiper/SwiperCarousel.module.scss
+++ b/components/Swiper/SwiperCarousel.module.scss
@@ -23,6 +23,8 @@
     background: linear-gradient(70deg, $blue-1--transparent, $blue-2--transparent);
     backdrop-filter: blur(3px);
     padding: 1rem;
+    color: white;
+    font-weight: bold;
 
     h1 {
       font-size: 1.3rem;
