--- a/components/Title/Title.module.scss
+++ b/components/Title/Title.module.scss
@@ -3,7 +3,7 @@
 .title {
   position: relative;
   margin: 10vh;
-  font-size: 2rem;
+  font-size: 2em;
   font-weight: bold;
   background: linear-gradient(60deg, $blue-1, $green-1);
   background-clip: text;
