--- a/styles/globals.css
+++ b/styles/globals.css
@@ -88,6 +88,7 @@ button {
 /* Configuramos anclas suaves */
 html {
   scroll-behavior: smooth;
+  user-select: none;
 }
 
 /* Desactivamos estilos por defecto de las principales etiquetas de texto */
@@ -180,16 +181,4 @@ body {
   font-size: 100%;
   font-family: var(--tipo-principal);
   color: var(--negro);
-  /* opcional */
-  line-height: 1.4em;
-  /* opcional */
-  -webkit-hyphens: auto;
-  -ms-hyphens: auto;
-  hyphens: auto;
-  /* opcional */
-  font-smooth: always;
-  /* opcional */
-  -webkit-font-smoothing: antialiased;
-  /* opcional */
-  -moz-osx-font-smoothing: grayscale;
 }
