--- a/pages/politics/Politics.module.scss
+++ b/pages/politics/Politics.module.scss
@@ -1,7 +1,8 @@
 @import '../../styles/colors.scss';
 
-.cookies {
+.politics {
   width: 90vw;
+  color: black;
 
   @media screen and (min-width: 768px) {
     width: 70vw;
@@ -45,12 +46,25 @@
 
   }
 
-  ol {
+  ol,
+  ul {
 
     li {
       list-style-position: inside;
       list-style-type: decimal;
       padding: .5rem 3rem;
     }
+  }
+
+  ul {
+    li {
+      list-style-type: disc;
+    }
+  }
+
+
+  a {
+    text-decoration: underline;
+    color: $blue-1;
   }
 }
