--- a/components/Swiper/SwiperCarousel.module.scss
+++ b/components/Swiper/SwiperCarousel.module.scss
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 40vh;
+  height: 50vh;
   overflow: hidden;
 
   @media screen and (min-width: 768px) {
@@ -72,7 +72,7 @@
       height: 100%;
 
       img {
-        object-fit: cover;
+        height: 100%;
       }
     }
   }
