--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -76,10 +76,11 @@
     position: relative;
     font-size: 1.5rem;
     margin: 2rem;
-    color: white;
+    color: black;
     font-weight: bold;
 
     @media screen and (min-width: 768px) {
+      color: white;
       font-size: 2rem;
     }
 
