--- a/components/Swiper/SwiperCarousel.module.scss
+++ b/components/Swiper/SwiperCarousel.module.scss
@@ -47,8 +47,6 @@
       top: 83%;
       left: 0;
 
-      @media screen and (min-width: 768px) {}
-
       img {
         transform: rotate(180deg);
       }
@@ -57,8 +55,6 @@
     .swiperNext {
       top: 83%;
       right: 0;
-
-      @media screen and (min-width: 768px) {}
     }
   }
 
@@ -67,13 +63,14 @@
     justify-content: center;
     align-items: center;
 
-    div {
+    img {
       width: 100%;
-      height: 100%;
+      height: 50vh;
 
-      img {
-        height: 100%;
+      @media screen and (min-width: 768px) {
+        height: 90vh;
       }
     }
+
   }
 }
