--- a/components/Form/Form.module.scss
+++ b/components/Form/Form.module.scss
@@ -10,8 +10,9 @@
   padding: 1rem;
 
   h4 {
-    color: white;
-    font-size: 1.2rem;
+    color: #fff;
+    font-size: 1.4rem;
+    font-weight: bold;
     padding: 1rem;
   }
 
@@ -52,6 +53,11 @@
       @media screen and (min-width: 768px) {
         margin-bottom: 0;
         flex-direction: column;
+      }
+
+      span {
+        color: white;
+        font-weight: bold;
       }
 
       svg {
@@ -98,6 +104,7 @@
 
         &::placeholder {
           color: white;
+          font-weight: bold;
         }
       }
 
