--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -48,7 +48,7 @@
     text-align: center;
     font-weight: bold;
     font-size: 1.3rem;
-    color: $orange;
+    color: $blue-2;
     padding: .5rem;
     margin-bottom: 1rem;
   }
