--- a/pages/ratas/Ratas.module.scss
+++ b/pages/ratas/Ratas.module.scss
@@ -33,7 +33,7 @@
   position: relative;
   background-color: $blue-1;
   border-radius: 1rem;
-  color: white;
+  color: black;
 
   img {
     position: absolute;
