--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -4,7 +4,7 @@ $blue-1--transparent: #279fbda1;
 $blue-2--transparent: #5384d8a1;
 
 $green-1: #9ad058;
-$green-2: #338581;
+$green-2: #307c86;
 
 $orange: #e47b37;
 
