--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -34,6 +34,10 @@
       justify-content: center;
       align-items: center;
 
+      span {
+        font-size: 0.01em
+      }
+
       svg {
         color: $blue-2;
         width: 1.7rem;
